--- a/About.Rmd
+++ b/About.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "自我介紹"
-author: "My name"
+author: "王藝樺"
 date: "`r Sys.Date()`"
 output: html_document
 ---
@@ -20,12 +20,12 @@ knitr::opts_chunk$set(echo = TRUE)
 
 - 我從那裡來？ 
 
-NULL
+台中市
 
 - 我決定來這裡的動機？
 
-NULL
+喜歡台南的環境
 
 - 我對這門課的期望？
 
-NULL
+能學到相關知識
