--- a/About.Rmd
+++ b/About.Rmd
@@ -24,8 +24,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 - 我決定來這裡的動機？
 
-喜歡台南的環境也嚮往南部生活
+喜歡台南的環境也很嚮往南部生活，從以前開始就很喜歡成大，所以努力學習來到了這裡開啟我的大學生活！！
 
 - 我對這門課的期望？
 
-能學到相關知識，希望未來能實際運用在工作上
+能學到與心理學有關的知識，雖然一開始聽到統計學有點害怕，但還是希望自己可以突破難關，在未來將在這堂課上學到的技巧實際運用在工作方面
